tests/types/result/errors/test_err_incompatible_error_conversion.sushi
# Tests error for incompatible error type conversion

enum ErrorA:
    Variant1

enum ErrorB:
    Variant2

fn returns_a() i32 | ErrorA:
    return Result.Err(ErrorA.Variant1)

fn main() i32:
    let Result<i32, ErrorB> result = returns_a()
    return Result.Ok(0)
